src/test/deca/syntax/invalid/synt/emptyWhile.deca
// @expected_output deca:3:10:
{
    while() {}
}
